force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/Recurring_Donation_Batch_Errors__c.object-meta.xml
<CustomObject>
    <description>Error Logs</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>RD-{DD}-{MM}-{0000}</displayFormat>
        <label>ERROR #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>