force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/fields/Basket_Details__c.field-meta.xml
<CustomField>
    <fullName>Basket_Details__c</fullName>
    <inlineHelpText>Basket Details</inlineHelpText>
    <label>Basket Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>