force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/fields/basketId__c.field-meta.xml
<CustomField>
    <fullName>basketId__c</fullName>
    <label>basketId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>