force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/fields/Donor_Details__c.field-meta.xml
<CustomField>
    <fullName>Donor_Details__c</fullName>
    <inlineHelpText>Donor Details</inlineHelpText>
    <label>Donor Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>