force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/fields/Error_Context__c.field-meta.xml
<CustomField>
    <fullName>Error_Context__c</fullName>
    <label>Error Context</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>