force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/fields/EventDetails__c.field-meta.xml
<CustomField>
    <fullName>EventDetails__c</fullName>
    <label>Request Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>