force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity with error</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Recurring_Donation_Batch_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>