force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <inlineHelpText>Payment Details</inlineHelpText>
    <label>Payment Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>