force-app/main/default/objects/Recurring_Donation_Batch_Errors__c/fields/Pledge_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Pledge</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Error Logs</relationshipLabel>
    <relationshipName>Error_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>